// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article D.212 => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`Article D.212-5 => D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "fullValue": "D-212-5",
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`Article D.212-5-6 => D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "fullValue": "D-212-5-6",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`Article D.212-5-6-7 => D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "fullValue": "D-212-5-6-7",
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`Article D-212 => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`Article D-212-4 => D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "fullValue": "D-212-4",
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`Article D212 => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`Article D212 du code civil => D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "D-212 du Code civil",
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`Article D212 du code penal et R413 du code civil => D-212 du CODE PENAL, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071029",
      "source": "code penal",
      "value": "CODE PENAL",
    },
    "fullValue": "D-212 du CODE PENAL",
    "source": "D212 du code penal",
    "value": "D-212 du CODE PENAL",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "R-413 du Code civil",
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`Article D212 du code pénal => D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "D-212 du Code pénal",
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`Article D212-3 => D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "fullValue": "D-212-3",
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`Article XD212 =>  1`] = `Array []`;

exports[`random text   Article D.212 random    text Article D.212    random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D.212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`random text   Article D.212-5 random    text Article D.212-5    random text => D-212-5, D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "fullValue": "D-212-5",
    "source": "D.212-5",
    "value": "D-212-5",
  },
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "fullValue": "D-212-5",
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`random text   Article D.212-5-6 random    text Article D.212-5-6    random text => D-212-5-6, D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "fullValue": "D-212-5-6",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "fullValue": "D-212-5-6",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`random text   Article D.212-5-6-7 random    text Article D.212-5-6-7    random text => D-212-5-6-7, D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "fullValue": "D-212-5-6-7",
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "fullValue": "D-212-5-6-7",
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`random text   Article D-212 random    text Article D-212    random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D-212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`random text   Article D-212-4 random    text Article D-212-4    random text => D-212-4, D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "fullValue": "D-212-4",
    "source": "D-212-4",
    "value": "D-212-4",
  },
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "fullValue": "D-212-4",
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`random text   Article D212 du code civil random    text Article D212 du code civil    random text => D-212 du Code civil, D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "D-212 du Code civil",
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "D-212 du Code civil",
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`random text   Article D212 du code penal et R413 du code civil random    text Article D212 du code penal et R413 du code civil    random text => D-212 du CODE PENAL, R-413 du Code civil, D-212 du CODE PENAL, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071029",
      "source": "code penal",
      "value": "CODE PENAL",
    },
    "fullValue": "D-212 du CODE PENAL",
    "source": "D212 du code penal",
    "value": "D-212 du CODE PENAL",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "R-413 du Code civil",
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071029",
      "source": "code penal",
      "value": "CODE PENAL",
    },
    "fullValue": "D-212 du CODE PENAL",
    "source": "D212 du code penal",
    "value": "D-212 du CODE PENAL",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "R-413 du Code civil",
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`random text   Article D212 du code pénal random    text Article D212 du code pénal    random text => D-212 du Code pénal, D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "D-212 du Code pénal",
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "D-212 du Code pénal",
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`random text   Article D212 random    text Article D212    random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`random text   Article D212-3 random    text Article D212-3    random text => D-212-3, D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "fullValue": "D-212-3",
    "source": "D212-3",
    "value": "D-212-3",
  },
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "fullValue": "D-212-3",
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`random text   Article XD212 random    text Article XD212    random text =>  1`] = `Array []`;

exports[`random text Article D.212 random text => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D.212 random text Article D.212 random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D.212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D.212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D.212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D.212-5 random text => D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "fullValue": "D-212-5",
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`random text Article D.212-5 random text Article D.212-5 random text => D-212-5, D-212-5 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "fullValue": "D-212-5",
    "source": "D.212-5",
    "value": "D-212-5",
  },
  Object {
    "article": Object {
      "source": "D.212-5",
      "value": "D-212-5",
    },
    "code": undefined,
    "fullValue": "D-212-5",
    "source": "D.212-5",
    "value": "D-212-5",
  },
]
`;

exports[`random text Article D.212-5-6 random text => D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "fullValue": "D-212-5-6",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`random text Article D.212-5-6 random text Article D.212-5-6 random text => D-212-5-6, D-212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "fullValue": "D-212-5-6",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": undefined,
    "fullValue": "D-212-5-6",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`random text Article D.212-5-6-7 random text => D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "fullValue": "D-212-5-6-7",
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`random text Article D.212-5-6-7 random text Article D.212-5-6-7 random text => D-212-5-6-7, D-212-5-6-7 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "fullValue": "D-212-5-6-7",
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
  Object {
    "article": Object {
      "source": "D.212-5-6-7",
      "value": "D-212-5-6-7",
    },
    "code": undefined,
    "fullValue": "D-212-5-6-7",
    "source": "D.212-5-6-7",
    "value": "D-212-5-6-7",
  },
]
`;

exports[`random text Article D-212 random text => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D-212 random text Article D-212 random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D-212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D-212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D-212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D-212-4 random text => D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "fullValue": "D-212-4",
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`random text Article D-212-4 random text Article D-212-4 random text => D-212-4, D-212-4 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "fullValue": "D-212-4",
    "source": "D-212-4",
    "value": "D-212-4",
  },
  Object {
    "article": Object {
      "source": "D-212-4",
      "value": "D-212-4",
    },
    "code": undefined,
    "fullValue": "D-212-4",
    "source": "D-212-4",
    "value": "D-212-4",
  },
]
`;

exports[`random text Article D212 du code civil random text => D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "D-212 du Code civil",
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`random text Article D212 du code civil random text Article D212 du code civil random text => D-212 du Code civil, D-212 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "D-212 du Code civil",
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "D-212 du Code civil",
    "source": "D212 du code civil",
    "value": "D-212 du Code civil",
  },
]
`;

exports[`random text Article D212 du code penal et R413 du code civil random text => D-212 du CODE PENAL, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071029",
      "source": "code penal",
      "value": "CODE PENAL",
    },
    "fullValue": "D-212 du CODE PENAL",
    "source": "D212 du code penal",
    "value": "D-212 du CODE PENAL",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "R-413 du Code civil",
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`random text Article D212 du code penal et R413 du code civil random text Article D212 du code penal et R413 du code civil random text => D-212 du CODE PENAL, R-413 du Code civil, D-212 du CODE PENAL, R-413 du Code civil 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071029",
      "source": "code penal",
      "value": "CODE PENAL",
    },
    "fullValue": "D-212 du CODE PENAL",
    "source": "D212 du code penal",
    "value": "D-212 du CODE PENAL",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "R-413 du Code civil",
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006071029",
      "source": "code penal",
      "value": "CODE PENAL",
    },
    "fullValue": "D-212 du CODE PENAL",
    "source": "D212 du code penal",
    "value": "D-212 du CODE PENAL",
  },
  Object {
    "article": Object {
      "source": "R413",
      "value": "R-413",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070721",
      "source": "code civil",
      "value": "Code civil",
    },
    "fullValue": "R-413 du Code civil",
    "source": "R413 du code civil",
    "value": "R-413 du Code civil",
  },
]
`;

exports[`random text Article D212 du code pénal random text => D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "D-212 du Code pénal",
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`random text Article D212 du code pénal random text Article D212 du code pénal random text => D-212 du Code pénal, D-212 du Code pénal 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "D-212 du Code pénal",
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "D-212 du Code pénal",
    "source": "D212 du code pénal",
    "value": "D-212 du Code pénal",
  },
]
`;

exports[`random text Article D212 random text => D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D212 random text Article D212 random text => D-212, D-212 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D212",
    "value": "D-212",
  },
  Object {
    "article": Object {
      "source": "D212",
      "value": "D-212",
    },
    "code": undefined,
    "fullValue": "D-212",
    "source": "D212",
    "value": "D-212",
  },
]
`;

exports[`random text Article D212-3 random text => D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "fullValue": "D-212-3",
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`random text Article D212-3 random text Article D212-3 random text => D-212-3, D-212-3 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "fullValue": "D-212-3",
    "source": "D212-3",
    "value": "D-212-3",
  },
  Object {
    "article": Object {
      "source": "D212-3",
      "value": "D-212-3",
    },
    "code": undefined,
    "fullValue": "D-212-3",
    "source": "D212-3",
    "value": "D-212-3",
  },
]
`;

exports[`random text Article XD212 random text =>  1`] = `Array []`;

exports[`random text Article XD212 random text Article XD212 random text =>  1`] = `Array []`;

exports[`should use defaultCode for Article D.212-5-6 1`] = `
Array [
  Object {
    "article": Object {
      "source": "D.212-5-6",
      "value": "D-212-5-6",
    },
    "code": Object {
      "id": "abc",
      "value": "code du test",
    },
    "fullValue": "D-212-5-6 du code du test",
    "source": "D.212-5-6",
    "value": "D-212-5-6",
  },
]
`;

exports[`should use defaultCode for Les articles L. 123-1 du code de la route est remplacé par L. 2253-3 du code pénal et ainsi de suite 1`] = `
Array [
  Object {
    "article": Object {
      "source": "L. 123-1",
      "value": "L-123-1",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006074947",
      "source": "code de la route",
      "value": "Code de la route",
    },
    "fullValue": "L-123-1 du Code de la route",
    "source": "L. 123-1 du code de la route",
    "value": "L-123-1 du Code de la route",
  },
  Object {
    "article": Object {
      "source": "L. 2253-3",
      "value": "L-2253-3",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "L-2253-3 du Code pénal",
    "source": "L. 2253-3 du code pénal",
    "value": "L-2253-3 du Code pénal",
  },
]
`;

exports[`should use defaultCode for Les articles L. 123-1 du code de la route est remplacé par L. 2253-3 du code pénal et ainsi de suite et l'article D123-4 est OK 1`] = `
Array [
  Object {
    "article": Object {
      "source": "L. 123-1",
      "value": "L-123-1",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006074947",
      "source": "code de la route",
      "value": "Code de la route",
    },
    "fullValue": "L-123-1 du Code de la route",
    "source": "L. 123-1 du code de la route",
    "value": "L-123-1 du Code de la route",
  },
  Object {
    "article": Object {
      "source": "L. 2253-3",
      "value": "L-2253-3",
    },
    "code": Object {
      "etat": "VIGUEUR",
      "id": "LEGITEXT000006070719",
      "source": "code pénal",
      "value": "Code pénal",
    },
    "fullValue": "L-2253-3 du Code pénal",
    "source": "L. 2253-3 du code pénal",
    "value": "L-2253-3 du Code pénal",
  },
  Object {
    "article": Object {
      "source": "D123-4",
      "value": "D-123-4",
    },
    "code": Object {
      "id": "abc",
      "value": "code du test",
    },
    "fullValue": "D-123-4 du code du test",
    "source": "D123-4",
    "value": "D-123-4",
  },
]
`;
